# home-automation

./: Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
client/: Makefile  consts.py  functions.py  main.py  pyproject.toml
src/: main.py
src/bitwarden/: bitwarden.py
src/core/assistant/: assistant_template.py  consts.py  open_ai_assistatnt.py
src/core/discord/: bot.py
src/core/server/: server.py
src/core/tools/: tools.py
src/core/voice_recognition/: consts.py  continous_recognition.py  voice_recognition.py  wakeword.py
src/core/voice_recognition/models/: thanks_new_worse.onnx
src/keyvault/: infisical.py
src/modules/assistant/: assistant.py  assistant_template.py  open_ai_assistatnt.py
src/modules/audio-server/: server.py
src/modules/computer/: computer.py  tools.py
src/modules/date/: date.py  tools.py
src/modules/home_assistant/: consts.py  integration.py
src/modules/light/: light.py  tools.py
src/modules/shopping_list/: shopping_list.py
src/modules/simple_memory/: simple_memory.py  tools.py
src/modules/todoist/: consts.py  todoist.py  tools.py
src/modules/tools/: tools.py
src/modules/user_communication/: communication.py  tools.py
src/modules/voice_recognition/: voice_recognition.py  wakeword.py
src/modules/voice_recognition/models/: thanks.onnx
src/modules/web_scraper/: scraper.py
src/modules/youtube/: consts.py  tools.py  youtube.py
