[tool.poetry]
name = "home-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_automation"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.327"
speechrecognition = "^3.10.0"
openai = "^0.28.1"
pyaudio = "^0.2.13"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
autoflake = "^2.2.1"
loguru = "^0.7.2"
todoist-api-python = "^2.1.3"
openwakeword = "^0.5.1"
onnxruntime = "^1.16.2"
matplotlib = "^3.8.1"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"
google-api-python-client = "^2.108.0"
discord = "^2.3.2"
faster-whisper = "^0.10.0"
python-dotenv = "^1.0.0"
youtube-search-python = "^1.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
