[tool.poetry]
name = "home-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_automation"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
speechrecognition = "^3.10.0"
openai = "^1.53.0"
black = "^24.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
autoflake = "^2.2.1"
loguru = "^0.7.2"
todoist-api-python = "^2.1.3"
openwakeword = "^0.6.0"
onnxruntime = "^1.16.2"
matplotlib = "^3.8.1"
fastapi = "^0.115.4"
python-multipart = "^0.0.17"
uvicorn = "^0.32.0"
google-api-python-client = "^2.108.0"
discord = "^2.3.2"
faster-whisper = "^1.0.3"
python-dotenv = "^1.0.0"
youtube-search-python = "^1.6.6"
SpeechRecognition = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
